I'm no longer a graduate...

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div id="main">
 
 				<header class="major container">
-					<h2>I am currently working as a Graduate Penetration Tester at one of the largest banks in Australia.
+					<h2>I am currently working as a Penetration Tester at one of the largest banks in Australia.
                     <br /><br />Below are some of the companies I've worked for.</h2>
 				</header>
 
